[package]
name = "tg-bot"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/axumrs/tg-bot"
homepage = "https://axum.rs"
description = "axum.rs专题《使用axum开发Telegram机器人》"


[dependencies]
axum = "0.3"
tokio = { version="1", features = ["full"] }
serde = { version="1", features = ["derive"] }
dotenv = "0.15"
config = "0.11"
tracing = "0.1"
tracing-subscriber = "0.2"
reqwest = "0.11"
